--- a/index.html
+++ b/index.html
@@ -1,30 +1,162 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="stylesheet" href="/styles/normalize.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 </head>
 <body>
+
   <div class="page">
     <header class="header">
-
+      <img src="/images/logo_place_header.svg" alt="logo" class="logo logo_place_header">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современныеи эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link link">Узнать &#8594;</a></p>
+      <img class="header__main-illustration" src="/images/header-image.png" alt="illustration">
+      <div class="header__square-pic">
+  </div>
     </header>
+
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">
+            <h2 class="two-columns__brief_text">Главные проблемы в обучении</h2>
+          </div>
+          <div class="two-columns__main-text">
+            <p class="two-columns__main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__main-text_paragraph"><span class="two-columns__main-text_span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__main-text_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <div class="section__table">
+          <div class="table__cell">
+            <p class="table__heading">86 миллиардов</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">2,1 миллиарда</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text-bank">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">1000 терабайт</p>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">500 триллионов</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">420 миллионов</p>
+            <p class="table__text">Число взрослых людей оложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text-bank">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">17-20 лет</p>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">1885 год</p>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">1889 год</p>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a class="feynman__link link" href="#">Подробнее &#8594;</a>
       </section>
 
       <section class="kaufman">
+        <h2 class="section-title section-title_theme-dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</h3>
+        <img class="kaufman__triangle" src="/images/kaufman-triangle.svg" alt="triangle">
+        <div class="section__table table_theme-dark">
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">1</p>
+            <p class="table__text table__text_theme-dark">Выберете привлекательный проект.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">2</p>
+            <p class="table__text table__text_theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">3</p>
+            <p class="table__text table__text_theme-dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">4</p>
+            <p class="table__text table__text_theme-dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">5</p>
+            <p class="table__text table__text_theme-dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">6</p>
+            <p class="table__text table__text_theme-dark">Устраните прептствия для занятий.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">7</p>
+            <p class="table__text table__text_theme-dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">8</p>
+            <p class="table__text_theme-dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">9</p>
+            <p class="table__text_theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell_theme-dark">
+            <p class="table__heading table__heading_theme-dark">10</p>
+            <p class="table__text table__text_theme-dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+
+        </div>
+
       </section>
     </main>
     <footer class="footer">
 
+      <div class="footer__columns">
+          <div class="footer__column_content-copyright">
+            <img class="logo logo__place_footer" src="/images/logo_place_footer.svg" alt="">
+            <p class="footer__author">&#169;2019. Виктор Абанькин</p>
+          </div>
+          <nav class="footer__column_content-info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+              <ul class="footer__column-links-no-list-style">
+                <li><a href="#" class="footer__column-links">Главная</a></li>
+                <li><a href="#" class="footer__column-links">Концепция</a></li>
+                <li><a href="#" class="footer__column-links">Наставники</a></li>
+              </ul>
+          </nav>
+            <div class="footer__column footer__column_content-social">
+              <h3 class="footer__column-heading">Соцсети</h3>
+                <nav>
+                  <ul class="footer__column-links-no-list-style">
+                    <li><a href="#" class="footer__column-link"><img src="/images/facebook_color_white.svg" alt="logo Facebook" class="footer__social-icon">Facebook</a></li>
+                    <li><a href="#" class="footer__column-link"><img src="/images/vk_color_white.svg" alt="logo VKontakte" class="footer__social-icon">ВКонтакте</a></li>
+                    <li><a href="#" class="footer__column-link"><img src="/images/instagram_color_white.svg" alt="logo instagram" class="footer__social-icon">Instagram</a></li>
+                  </ul>
+                </nav>
+            </div>
+          </div>
+        </div>
     </footer>
   </div>
 </body>
