--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link rel="stylesheet" href="/styles/normalize.css">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
@@ -11,10 +11,10 @@
 
   <div class="page">
     <header class="header">
-      <img src="/images/logo_place_header.svg" alt="logo" class="logo logo_place_header">
+      <img src="./images/logo_place_header.svg" alt="logo" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современныеи эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link link">Узнать &#8594;</a></p>
-      <img class="header__main-illustration" src="/images/header-image.png" alt="illustration">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="illustration">
       <div class="header__square-pic">
       </div>
     </header>
@@ -83,7 +83,7 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme-dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</h3>
-        <img class="kaufman__triangle" src="/images/kaufman-triangle.svg" alt="triangle">
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="triangle">
         <div class="section__table table_theme-dark">
           <div class="table__cell_theme-dark">
             <p class="table__heading table__heading_theme-dark">1</p>
@@ -134,7 +134,7 @@
 
         <div class="footer__columns">
           <div class="footer__column_content-copyright">
-            <img class="logo logo__place_footer" src="/images/logo_place_footer.svg" alt="">
+            <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="">
             <p class="footer__author">&#169;2019. Виктор Абанькин</p>
           </div>
           <nav class="footer__column_content-info">
@@ -149,9 +149,9 @@
               <h3 class="footer__column-heading">Соцсети</h3>
                 <nav>
                   <ul class="footer__column-links-no-list-style">
-                    <li><a href="#" class="footer__column-link"><img src="/images/facebook_color_white.svg" alt="logo Facebook" class="footer__social-icon">Facebook</a></li>
-                    <li><a href="#" class="footer__column-link"><img src="/images/vk_color_white.svg" alt="logo VKontakte" class="footer__social-icon">ВКонтакте</a></li>
-                    <li><a href="#" class="footer__column-link"><img src="/images/instagram_color_white.svg" alt="logo instagram" class="footer__social-icon">Instagram</a></li>
+                    <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="logo Facebook" class="footer__social-icon">Facebook</a></li>
+                    <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="logo VKontakte" class="footer__social-icon">ВКонтакте</a></li>
+                    <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="logo instagram" class="footer__social-icon">Instagram</a></li>
                   </ul>
                 </nav>
             </div>
