--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="logo" class="logo logo_place_header">
+      <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современныеи эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link link">Узнать &#8594;</a></p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="illustration">
+      <p class="header__subtitle">Какие современныеи эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link link">Узнать &rarr;</a></p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Иллюстрация Опять двойка">
       <div class="header__square-pic">
       </div>
     </header>
@@ -34,7 +34,7 @@
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
-        <div class="section__table">
+        <div class="table">
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
@@ -79,78 +79,77 @@
       </section>
 
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</h3>
+        <h2 class="section-title section__title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="kaufman__triangle">
         </div>
-        <div class="section__table table_theme-dark">
-          <div class="table__cell_theme-dark">
+        <div class="table table__theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">1</p>
-            <p class="table__text table__text_theme-dark">Выберете привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">2</p>
-            <p class="table__text table__text_theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">3</p>
-            <p class="table__text table__text_theme-dark">Определите целевой уровень мастерства.</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">4</p>
-            <p class="table__text table__text_theme-dark">Разбейте навык на элементы.</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">5</p>
             <p class="table__text table__text_theme-dark">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">6</p>
             <p class="table__text table__text_theme-dark">Устраните прептствия для занятий.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">7</p>
             <p class="table__text table__text_theme-dark">Выделите специальное время для занятий.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">8</p>
-            <p class="table__text_theme-dark">Создайте быстрые петли обратной связи.</p>
+            <p class="table__text table__text_theme-dark">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">9</p>
-            <p class="table__text_theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell_theme-dark">
+          <div class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">10</p>
             <p class="table__text table__text_theme-dark">Уделяйте внимание количеству и скорости.</p>
           </div>
-
         </div>
 
-      </section>
+</section>
     </main>
     <footer class="footer">
 
         <div class="footer__columns">
-          <div class="footer__column_content-copyright">
-            <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="">
-            <p class="footer__author">&#169;2019. Виктор Абанькин</p>
+          <div class="footer__column_content_copyright">
+            <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+            <p class="footer__author">&copy;2019. Виктор Абанькин</p>
           </div>
-          <nav class="footer__column_content-info">
+          <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
-              <ul class="footer__column-links-no-list-style">
-                <li><a href="#" class="footer__column-links">Главная</a></li>
-                <li><a href="#" class="footer__column-links">Концепция</a></li>
-                <li><a href="#" class="footer__column-links">Наставники</a></li>
+              <ul class="footer__column-links">
+                <li><a href="#" class="footer__column-link">Главная</a></li>
+                <li><a href="#" class="footer__column-link">Концепция</a></li>
+                <li><a href="#" class="footer__column-link">Наставники</a></li>
               </ul>
           </nav>
-            <div class="footer__column footer__column_content-social">
+            <div class="footer__column footer__column_content_social">
               <h3 class="footer__column-heading">Соцсети</h3>
                 <nav>
-                  <ul class="footer__column-links-no-list-style">
-                    <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="logo Facebook" class="footer__social-icon">Facebook</a></li>
-                    <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="logo VKontakte" class="footer__social-icon">ВКонтакте</a></li>
-                    <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="logo instagram" class="footer__social-icon">Instagram</a></li>
+                  <ul class="footer__column-links">
+                    <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Логотип Фейсбук" class="footer__social-icon">Facebook</a></li>
+                    <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
+                    <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Логотип Инстаграм" class="footer__social-icon">Instagram</a></li>
                   </ul>
                 </nav>
             </div>
