--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading">500 триллионов</h3>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
@@ -85,43 +85,43 @@
         </div>
         <div class="table table__theme_dark">
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">1</p>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">2</p>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">3</p>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">4</p>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">5</p>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme-dark">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">6</p>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme-dark">Устраните прептствия для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">7</p>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme-dark">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">8</p>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme-dark">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">9</p>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">10</p>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme-dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
