--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </section>
 
       <section class="kaufman">
-        <h2 class="section-title section__title_theme_dark">Принципы обучения</h2>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="kaufman__triangle">
         </div>
@@ -126,13 +126,13 @@
           </div>
         </div>
 
-</section>
+      </section>
     </main>
     <footer class="footer">
 
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
-            <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+          <div class="footer__column footer__column_content_copyright">
+            <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
             <p class="footer__author">&copy;2019. Виктор Абанькин</p>
           </div>
           <nav class="footer__column footer__column_content_info">
