--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="kaufman__triangle">
         </div>
-        <div class="table table__theme_dark">
+        <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p>
