--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
       <h2 class="section-title section-title_place_resources">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <div class="resources__logo-zone">
-        <img class="resources__logo" src="./images/resources-arzamas.svg" alt="">
-        <img class="resources__logo" src="./images/resources-n1.svg" alt="">
-        <img class="resources__logo" src="./images/resources-strelka.svg" alt="">
-        <img class="resources__logo" src="./images/resources-polka.svg" alt="">
+        <img class="resources__logo" src="./images/resources-arzamas.svg" alt="логотип арзамас">
+        <img class="resources__logo" src="./images/resources-n1.svg" alt="логотип н-1">
+        <img class="resources__logo" src="./images/resources-strelka.svg" alt="логотип стрелка">
+        <img class="resources__logo" src="./images/resources-polka.svg" alt="логотип полка">
       </div>
     </section>
 
