--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p class="header__subtitle">Какие современныеи эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="#" class="header__link link">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Иллюстрация Опять двойка">
-      <div class="header__square-pic">
+      <div class="header__square-pic rotation">
       </div>
     </header>
 
@@ -44,32 +44,32 @@
 
         <div class="cards">
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" alt="изображение">
+            <img class="cards__image" src="./images/cards-attention.png" alt="книга">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="изображение">
+            <img class="cards__image" src="./images/cards-recall.png" alt="скульптура">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt="изображение">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="зал">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt="изображение">
+            <img class="cards__image" src="./images/cards-question.png" alt="помещение">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="изображение">
+            <img class="cards__image" src="./images/cards-competence.png" alt="стопка книг">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.
@@ -81,12 +81,12 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
-            title="YouTube video player" frameborder="0"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
+          title="YouTube video player" style="border: 0;"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
+            title="YouTube video player" style="border: 0;"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
@@ -158,18 +158,18 @@
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
             смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
           </p>
-          <h4 class="khan__quote-author">Джордж Лукас</h4>
+          <p class="khan__quote-author">Джордж Лукас<p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги Весь мир - школа">
-            <a class="link khan__element-buy-link" href="#">Купить книгу &rarr;</a>
+            <a class="link khan__buy-link" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="kaufman__triangle">
+        <div class="kaufman__triangle rotation">
         </div>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
@@ -219,14 +219,15 @@
     </main>
 
     <section class="resources">
-      <h2 class="section-title section-title_place_resources">Полезные ресурсы</h2>
+      <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-      <div class="resources__logo-zone">
-        <a class="resources__link" href="#"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="логотип арзамас"></a>
-        <a class="resources__link" href="#"><img class="resources__logo" src="./images/resources-n1.svg" alt="логотип н-1"></a>
-        <a class="resources__link" href="#"><img class="resources__logo" src="./images/resources-strelka.svg" alt="логотип стрелка"></a>
-        <a class="resources__link" href="#"><img class="resources__logo" src="./images/resources-polka.svg" alt="логотип полка"></a>
-      </div>
+
+        <ul class="resources__logo-zone">
+          <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="логотип арзамас"></a></li>
+          <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-n1.svg" alt="логотип н-1"></a></li>
+          <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-strelka.svg" alt="логотип стрелка"></a></li>
+          <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-polka.svg" alt="логотип полка"></a></li>
+        </ul>
     </section>
 
     <footer class="footer">
