--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
-          title="YouTube video player" style="border: 0;"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
-            title="YouTube video player" style="border: 0;"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+            style="border: 0;"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+            style="border: 0;"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
@@ -158,7 +158,7 @@
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
             смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
           </p>
-          <p class="khan__quote-author">Джордж Лукас<p>
+          <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги Весь мир - школа">
@@ -222,12 +222,16 @@
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
-        <ul class="resources__logo-zone">
-          <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="логотип арзамас"></a></li>
-          <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-n1.svg" alt="логотип н-1"></a></li>
-          <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-strelka.svg" alt="логотип стрелка"></a></li>
-          <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-polka.svg" alt="логотип полка"></a></li>
-        </ul>
+      <ul class="resources__logo-zone">
+        <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-arzamas.svg"
+              alt="логотип арзамас"></a></li>
+        <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-n1.svg" alt="логотип н-1"></a>
+        </li>
+        <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-strelka.svg"
+              alt="логотип стрелка"></a></li>
+        <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-polka.svg"
+              alt="логотип полка"></a></li>
+      </ul>
     </section>
 
     <footer class="footer">
