resources target blank

--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
       <ul class="resources__logo-zone">
-        <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-arzamas.svg"
+        <li class="link"><a href="https://arzamas.academy/"><img class="resources__logo" target="_blank" src="./images/resources-arzamas.svg"
               alt="логотип арзамас"></a></li>
-        <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-n1.svg" alt="логотип н-1"></a>
+        <li class="link"><a href="https://nplus1.ru/"><img class="resources__logo" target="_blank" src="./images/resources-n1.svg" alt="логотип н-1"></a>
         </li>
-        <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-strelka.svg"
+        <li class="link"><a href="https://strelka.com/"><img class="resources__logo" target="_blank" src="./images/resources-strelka.svg"
               alt="логотип стрелка"></a></li>
-        <li class="link"><a href="#"><img class="resources__logo" src="./images/resources-polka.svg"
+        <li class="link"><a href="https://polka.academy/"><img class="resources__logo" target="_blank" src="./images/resources-polka.svg"
               alt="логотип полка"></a></li>
       </ul>
     </section>
